--- a/Project_1 index.html
+++ b/Project_1 index.html
@@ -2,8 +2,18 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Заголовок</title>
+    <title>Заголовок страницы</title>
   </head>
-  <body>Страница</body>
+  <body>
+    <header class="main-header">
+      <!-- Шапка сайта -->
+    </header>
+    <main>
+      <!-- Основное содержимое страницы -->
+    </main>
+    <footer class="main-footer">
+      <!-- Подвал сайта -->
+    </footer>
+  </body>
 </html>
-123
+123yes
