--- a/Project_1 index.html
+++ b/Project_1 index.html
@@ -2,11 +2,38 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Заголовок страницы</title>
+    <title>Барбершоп "Бородинский"</title>
   </head>
   <body>
-    <header class="main-header">
-      <!-- Шапка сайта -->
+    <header class="page-header">
+    <nav class="navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О нас</a>
+          </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="catalog.html">Каталог</a>
+          </li> 
+        <li class="navigation-item">
+            <a class="navigation-link" href="#">Частые вопросы</a>
+            </li> 
+      </ul>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Поиск</span> 
+          </a>
+          </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Корзина</span>
+             </a>
+          </li> 
+        <li class="navigation-item">
+            <a class="navigation-link" href="#">Вход</a>
+            </li> 
+      </ul>
+    </nav>
     </header>
     <main>
       <!-- Основное содержимое страницы -->
@@ -16,4 +43,3 @@
     </footer>
   </body>
 </html>
-123yes
