--- a/sedona/sedona_index.html
+++ b/sedona/sedona_index.html
@@ -7,10 +7,10 @@
   <body>
     <header class="page-header">
         <nav class="navigation">
-            <ul class="navigation-list">
-                <a class="navigation-logo" href="sedona_index.html">
-                    <img class="page-logo" alt="логотип сайта Седона" src="https://sitesedona.github.io/img/logo.png" height="70" width="139">
-                </a>
+            <a class="navigation-logo" href="sedona_index.html">
+                <img class="page-logo" alt="логотип сайта Седона" src="https://sitesedona.github.io/img/logo.png" height="70" width="139">
+            </a>
+            <ul class="navigation-list">                
                 <li class="navigation-item">
                     <a href="#" class="navigation-link">Главная</a>
                 </li>
@@ -41,14 +41,74 @@
         </nav>      
     </header>
     <main class="main-1">
-            <img class="welcome-logo" alt="приветственный логотип SEDONA" src="https://sitesedona.github.io/img/welcome.png" height="352" width="458">
+            <img class="welcome-logo" alt="приветственный логотип SEDONA" src="welcome.png" height="352" width="458">
         <h1>
-            <p>Седона — небольшой городок в Аризоне,<br> 
-                заслуживающий большего!</p>
+            Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
         </h1>
         <h2>
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!  
         </h2>
+        
+        <section class="section-1">
+            <h2 class="inform-1 visually-hidden">Настоящий городок с фотографией</h2>
+            <section class="section-1.1">
+                <h2 class="inform-1.1"> Настоящий<br>городок</h2> 
+                <p class="section-1-text">— №1 —</p>   
+                <p class="section-1-text">Седона — не аттракцион<br> для туристов, там течёт<br>своя жизнь</p>       
+            </section>
+            <section class="section-1.2">
+                <h2 class="photo-1.2 visually-hidden">Фотография с флагами</h2>
+                <img class="photo-1.2" alt="Фотография с флагами на фоне здания" 
+                src="flag.jpg" height="384" width="800">
+            </section>
+        </section>
+
+        <section class="section-2">
+            <h2 class="preimushestva-1">Преимущества</h2>
+            <ul class="preimushestva-1-list">
+                <li class="preimushestva-1-item"> 
+                    <img src="" alt="логотип домик" width="74,7" height="72">
+                    <h3 class="preimushestva-1-title">Жильё</h3>
+                    <p class="preimushestva-1-text">Рекомендуем пожить<br> в настоящем мотеле,<br>всё как в кино!</p>
+                </li>
+                <li class="preimushestva-1-item"> 
+                    <img src="" alt="логотип бургер" width="73,81" height="70">
+                    <h3 class="preimushestva-1-title">Еда</h3>
+                    <p class="preimushestva-1-text">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
+                </li>
+                <li class="preimushestva-1-item"> 
+                    <img src="" alt="логотип сувениры" width="64" height="75,95">
+                    <h3 class="preimushestva-1-title">Сувениры</h3>
+                    <p class="preimushestva-1-text">Не только китайского,<br>но и настоящего местного<br> производства!</p>
+                </li>           
+            </ul>
+        </section>
+
+        <section class="section-3">
+            <h2 class="inform-3 visually-hidden">Мост дьявола</h2>            
+            <section class="section-3.1">
+                <h2 class="photo-3.1 visually-hidden">Фотография мост дьявола</h2>
+                <img class="photo-3.1" alt="Фотография мост дьявола" 
+                src="most.jpg" height="384" width="800">
+            </section>
+            <section class="section-3.2">
+                <h2 class="inform-3.2"> Там есть<br>мост дьявола</h2> 
+                <p class="section-3-text">— №2 —</p>   
+                <p class="section-3-text">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>       
+            </section>
+        </section>
+
+        <section class="section-4">
+
+        </section>
+
+        <section class="section-5">
+
+        </section>
+
+        <section class="section-6">
+
+        </section>
 
     
     </main>
@@ -58,5 +118,3 @@
   </body>
 </html>
 
-Проверка связи
-123
