--- a/sedona/sedona_index.html
+++ b/sedona/sedona_index.html
@@ -59,7 +59,7 @@
             <section class="section-1.2">
                 <h2 class="photo-1.2 visually-hidden">Фотография с флагами</h2>
                 <img class="photo-1.2" alt="Фотография с флагами на фоне здания" 
-                src="flag.jpg" height="384" width="800">
+                src="flag.png" height="384" width="800">
             </section>
         </section>
 
@@ -89,7 +89,7 @@
             <section class="section-3.1">
                 <h2 class="photo-3.1 visually-hidden">Фотография мост дьявола</h2>
                 <img class="photo-3.1" alt="Фотография мост дьявола" 
-                src="most.jpg" height="384" width="800">
+                src="most.png" height="384" width="800">
             </section>
             <section class="section-3.2">
                 <h2 class="inform-3.2"> Там есть<br>мост дьявола</h2> 
