--- a/sedona/sedona_index.html
+++ b/sedona/sedona_index.html
@@ -8,17 +8,17 @@
     <header class="page-header">
         <nav class="navigation">
             <a class="navigation-logo" href="sedona_index.html">
-                <img class="page-logo" alt="логотип сайта Седона" src="https://sitesedona.github.io/img/logo.png" height="70" width="139">
+                <img class="page-logo" alt="логотип сайта Седона" src="welcome.png" height="70" width="139">
             </a>
             <ul class="navigation-list">                
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">Главная</a>
+                    <a href="sedona_index.html" class="navigation-link">Главная</a>
                 </li>
                 <li class="navigation-item">
                     <a href="#" class="navigation-link">О Седоне</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">Гостиницы</a>
+                    <a href="sedona_catalog.html" class="navigation-link">Гостиницы</a>
                 </li>
             </ul>
             <ul class="navigation-list navigation-user">
@@ -42,10 +42,10 @@
     </header>
     <main class="main-1">
             <img class="welcome-logo" alt="приветственный логотип SEDONA" src="welcome.png" height="352" width="458">
-        <h1>
+        <h1 class="zagolovok-1">
             Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
         </h1>
-        <h2>
+        <h2 class="zagolovok-2">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!  
         </h2>
         
@@ -64,7 +64,7 @@
         </section>
 
         <section class="section-2">
-            <h2 class="preimushestva-1">Преимущества</h2>
+            <h2 class="preimushestva-1 visually-hidden">Преимущества</h2>
             <ul class="preimushestva-1-list">
                 <li class="preimushestva-1-item"> 
                     <img src="" alt="логотип домик" width="74,7" height="72">
@@ -99,21 +99,78 @@
         </section>
 
         <section class="section-4">
-
+            <h2 class="preimushestva-4 visually-hidden">Преимущества-2</h2>
+            <ul class="preimushestva-4-list">
+                <li class="preimushestva-4-item">                    
+                    <h3 class="preimushestva-4-title">Небольшая<br> площадь</h3>
+                    <p class="preimushestva-1-text">— №3 —</p>
+                    <p class="preimushestva-1-text">Все достопримечательности<br> находятся очень близко</p>            
+                </li>
+                <li class="preimushestva-4-item">                    
+                    <h3 class="preimushestva-4-title">Красивая<br>дорога</h3>
+                    <p class="preimushestva-1-text">— №4 —</p>
+                    <p class="preimushestva-1-text">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>            
+                </li>
+                <li class="preimushestva-4-item">                    
+                    <h3 class="preimushestva-4-title">Мало<br>туристов</h3>
+                    <p class="preimushestva-1-text">— №5 —</p>
+                    <p class="preimushestva-1-text">Большинство едет в Гранд<br> Каньон и толпится там</p>            
+                </li>      
+            </ul>
         </section>
 
-        <section class="section-5">
 
+        <section class="section-5">
+            <h2 class="zagolovok-1">Заинтересовались?</h2>
+            <h2 class="zagolovok-2">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</h2>
+            <a class="button" href="sedona_catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
         </section>
 
         <section class="section-6">
-
-        </section>
-
-    
+            <h2 class="zagolovok-3">Подпишитесь на рассылку</h2>
+            <p class="podzagolovok-4">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+            <form class="podpiska" action="https://echo.htmlacademy.ru" method="post">
+                <p class="news-e-mail">
+                    <label class="visually-hidden" for="news-e-mail">Email</label>
+                    <input class="field" placeholder="Ваш e-mail" type="news-e-mail" name="news-e-mail" id="news-e-mail" required> 
+                </p>
+              <button class="news-button" type="submit">
+                <span class="visually-hidden">Подписаться</span>
+              </button>
+            </form>       
+        </section>    
     </main>
     <footer class="main-footer">
-      <!-- Подвал сайта -->
+        <section class="fsection-1">
+            <h2 class="link visually-hidden">Ссылки на наши ресурсы</h2>
+            <ul class="social-ul">
+                <li class="social-li">
+                    <a class="social-a" href="https://twitter.com/htmlacademy_ru">
+                        <span class="visually-hidden">Твиттер</span>
+                    </a>
+                </li>
+                <li class="social-li">
+                    <a class="social-a" href="https://www.facebook.com/htmlacademy">
+                        <span class="visually-hidden">Facebook</span>
+                    </a>
+                </li>
+                <li class="social-li">
+                    <a class="social-a" href="https://www.youtube.com/c/HTMLAcademyRUS">
+                        <span class="visually-hidden">Youtube </span>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+        <section class="fsection-2">
+            <a class="footer-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </section>  
+
+        <section class="fsection-3">
+            <a class="navigation-logo-2" href="https://htmlacademy.ru/">
+                <img class="page-logo-2" alt="логотип сайта разработчика" src="logo_htmlacademy.png" height="34" width="115">
+            </a>
+        </section>
     </footer>
   </body>
 </html>
