--- a/sedona/sedona_index.html
+++ b/sedona/sedona_index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>SEDONA</title>
+    <link rel="stylesheet" href="styles\styles.css">
   </head>
   <body>
     <header class="page-header">
         <nav class="navigation">
             <a class="navigation-logo" href="sedona_index.html">
-                <img class="page-logo" alt="логотип сайта Седона" src="welcome.png" height="70" width="139">
+                <img class="page-logo" alt="логотип сайта Седона" src="image\a1.svg" height="70" width="139">
             </a>
             <ul class="navigation-list">                
                 <li class="navigation-item">
@@ -41,7 +42,7 @@
         </nav>      
     </header>
     <main class="main-1">
-            <img class="welcome-logo" alt="приветственный логотип SEDONA" src="welcome.png" height="352" width="458">
+            <img class="welcome-logo" alt="приветственный логотип SEDONA" src="image\a5.svg" height="352" width="458">
         <h1 class="zagolovok-1">
             Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
         </h1>
@@ -59,7 +60,7 @@
             <section class="section-1.2">
                 <h2 class="photo-1.2 visually-hidden">Фотография с флагами</h2>
                 <img class="photo-1.2" alt="Фотография с флагами на фоне здания" 
-                src="flag.png" height="384" width="800">
+                src="image\a7.jpg" height="384" width="800">
             </section>
         </section>
 
@@ -67,17 +68,17 @@
             <h2 class="preimushestva-1 visually-hidden">Преимущества</h2>
             <ul class="preimushestva-1-list">
                 <li class="preimushestva-1-item"> 
-                    <img src="" alt="логотип домик" width="74,7" height="72">
+                    <img src="image\a8.svg" alt="логотип домик" width="75" height="72">
                     <h3 class="preimushestva-1-title">Жильё</h3>
                     <p class="preimushestva-1-text">Рекомендуем пожить<br> в настоящем мотеле,<br>всё как в кино!</p>
                 </li>
                 <li class="preimushestva-1-item"> 
-                    <img src="" alt="логотип бургер" width="73,81" height="70">
+                    <img src="image\a9.svg" alt="логотип бургер" width="73,81" height="70">
                     <h3 class="preimushestva-1-title">Еда</h3>
                     <p class="preimushestva-1-text">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
                 </li>
                 <li class="preimushestva-1-item"> 
-                    <img src="" alt="логотип сувениры" width="64" height="75,95">
+                    <img src="image\a10.svg" alt="логотип сувениры" width="64" height="75,95">
                     <h3 class="preimushestva-1-title">Сувениры</h3>
                     <p class="preimushestva-1-text">Не только китайского,<br>но и настоящего местного<br> производства!</p>
                 </li>           
@@ -89,7 +90,7 @@
             <section class="section-3.1">
                 <h2 class="photo-3.1 visually-hidden">Фотография мост дьявола</h2>
                 <img class="photo-3.1" alt="Фотография мост дьявола" 
-                src="most.png" height="384" width="800">
+                src="image\a11.jpg" height="384" width="800">
             </section>
             <section class="section-3.2">
                 <h2 class="inform-3.2"> Там есть<br>мост дьявола</h2> 
@@ -168,7 +169,7 @@
 
         <section class="fsection-3">
             <a class="navigation-logo-2" href="https://htmlacademy.ru/">
-                <img class="page-logo-2" alt="логотип сайта разработчика" src="logo_htmlacademy.png" height="34" width="115">
+                <img class="page-logo-2" alt="логотип сайта разработчика" src="image\a13.svg" height="34" width="115">
              </a>
         </section>
     </footer>
