--- a/sedona/sedona_index.html
+++ b/sedona/sedona_index.html
@@ -41,28 +41,34 @@
             </ul>
         </nav>      
     </header>
-    <main class="main-1">
-            <img class="welcome-logo" alt="приветственный логотип SEDONA" src="image\a5.svg" height="352" width="458">
-        <h1 class="zagolovok-1">
+
+    <main class="main-index">
+        
+        <section class="main-section">
+        <img class="welcome-logo" alt="приветственный логотип SEDONA" src="image\a5.svg" height="352" width="458">
+        </section>    
+
+        <section class="title-page">
+        <h1 class="zagolovok-one">
             Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
         </h1>
-        <h2 class="zagolovok-2">
+        <h2 class="zagolovok-two">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!  
         </h2>
-        
-        <section class="section-1">
-            <h2 class="inform-1 visually-hidden">Настоящий городок с фотографией</h2>
-            <section class="section-1.1">
-                <h2 class="inform-1.1"> Настоящий<br>городок</h2> 
-                <p class="section-1-text">— №1 —</p>   
-                <p class="section-1-text">Седона — не аттракцион<br> для туристов, там течёт<br>своя жизнь</p>       
-            </section>
-            <section class="section-1.2">
-                <h2 class="photo-1.2 visually-hidden">Фотография с флагами</h2>
-                <img class="photo-1.2" alt="Фотография с флагами на фоне здания" 
+        </section>  
+        <div class="div-block">
+            <div class="lbl-gorodok">
+            <h2 class="lbl-hidden visually-hidden">Настоящий городок с фотографией</h2>           
+                <h2 class="lbl-title"> Настоящий<br>городок</h2> 
+                <p class="lbl-text">— №1 —</p>   
+                <p class="lbl-text">Седона — не аттракцион<br> для туристов, там течёт<br>своя жизнь</p>      
+        </div>
+            <div class="rbl-gorodok">
+                <h2 class="rbl-hidden visually-hidden">Фотография с флагами</h2>
+                <img class="rbl-photo" alt="Фотография с флагами на фоне здания" 
                 src="image\a7.jpg" height="384" width="800">
-            </section>
-        </section>
+            </div>
+        </div>
 
         <section class="section-2">
             <h2 class="preimushestva-1 visually-hidden">Преимущества</h2>
