--- a/sedona/sedona_catalog.html
+++ b/sedona/sedona_catalog.html
@@ -7,39 +7,44 @@
   </head>
   <body>
     <header class="page-header">
-        <nav class="navigation">
-            <a class="navigation-logo" href="sedona_index.html">
-                <img class="page-logo" alt="логотип сайта Седона" src="welcome.png" height="70" width="139">
-            </a>
-            <ul class="navigation-list">                
-                <li class="navigation-item">
-                    <a href="sedona_index.html" class="navigation-link">Главная</a>
-                </li>
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link">О Седоне</a>
-                </li>
-                <li class="navigation-item">
-                    <a href="sedona_catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
-                </li>
-            </ul>
-            <ul class="navigation-list navigation-user">
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link"> 
-                        <span class="visually-hidden">поиск</span>
-                    </a>
-                </li>
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link">
-                        <span class="visually-hidden">лайк</span>
-                    </a>
-                </li>
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link">
-                        <span class="visually-hidden">Хочу сюда!</span> 
-                    </a>
-                </li>
-            </ul>
-        </nav>      
+      <nav class="navigation">
+          <a class="navigation-logo" href="sedona_index.html">
+              <img class="page-logo" alt="логотип сайта Седона" src="image\a1.svg" height="70" width="139">
+          </a>
+
+          <ul class="navigation-ul">                
+              <li class="navigation-li">
+                  <a href="sedona_index.html" class="navigation-a">Главная</a>
+              </li>
+              <li class="navigation-li">
+                  <a href="#" class="navigation-a">О Седоне</a>
+              </li>
+              <li class="navigation-li">
+                  <a href="sedona_catalog.html" class="navigation-a">Гостиницы</a>
+              </li>
+          </ul>
+          <ul class="navigation-ul-user">
+              <li class="navigation-li">
+                  <a href="#" class="navigation-a"> 
+                      <img class="page-logo" alt="логотип сайта Седона" src="image\a3-search.svg" height="18" width="18">
+                      <span class="visually-hidden">поиск</span>
+                  </a>
+              </li>
+              <li class="navigation-li">
+                  <a href="#" class="navigation-a">
+                      <img class="page-logo" alt="логотип сайта Седона" src="image\a2-like.svg" height="18" width="18">
+                      <span class="visually-hidden">лайк</span>
+                  </a>
+              </li>
+              <li class="navigation-li">
+                  <a href="#" class="navigation-a">
+                      <img class="page-logo" alt="логотип сайта Седона" src="image\a4.png" height="37" width="160">
+                      <span class="visually-hidden">Хочу сюда!</span> 
+                  </a>
+              </li>
+          </ul>
+      </nav>      
+  </header>      
     </header>
     <main class="main-inner">
         <header class="inner-header">
@@ -156,7 +161,7 @@
             <ul class="gostinicy-list">
                 <li class="gostinicy-card">
                   <a class="gostinicy-card-link" href="product.html">
-                    <img class="gostinicy-card-image" src="1Amara Resort & Spa.png" alt="Amara Resort & Spa" width="300" height="206">
+                    <img class="gostinicy-card-image" src="image\cat1.jpg" alt="Amara Resort & Spa" width="300" height="206">
                     <h3 class="gostinicy-card-title">Amara Resort & Spa</h3>
                   </a>
                   <span class="gostinicy-card-type">Гостиница</span>
@@ -167,7 +172,7 @@
 
                 <li class="gostinicy-card">
                     <a class="gostinicy-card-link" href="product.html">
-                      <img class="gostinicy-card-image" src="2Desert Quail Inn.png" alt="Desert Quail Inn" width="300" height="206">
+                      <img class="gostinicy-card-image" src="image\cat2.jpg" alt="Desert Quail Inn" width="300" height="206">
                       <h3 class="gostinicy-card-title">Desert Quail Inn</h3>
                     </a>
                     <span class="gostinicy-card-type">Гостиница</span>
@@ -178,7 +183,7 @@
 
                   <li class="gostinicy-card">
                     <a class="gostinicy-card-link" href="product.html">
-                      <img class="gostinicy-card-image" src="3Villas at Poco Diablo.png" alt="Villas at Poco Diablo" width="300" height="206">
+                      <img class="gostinicy-card-image" src="image\cat3.jpg" alt="Villas at Poco Diablo" width="300" height="206">
                       <h3 class="gostinicy-card-title">Villas at Poco Diablo</h3>
                     </a>
                     <span class="gostinicy-card-type">Гостиница</span>
@@ -189,25 +194,14 @@
 
                   <li class="gostinicy-card">
                     <a class="gostinicy-card-link" href="product.html">
-                      <img class="gostinicy-card-image" src="3Villas at Poco Diablo.png" alt="Villas at Poco Diablo" width="300" height="206">
-                      <h3 class="gostinicy-card-title">Villas at Poco Diablo</h3>
-                    </a>
-                    <span class="gostinicy-card-type">Гостиница</span>
-                    <b class="gostinicy-card-price">От 2000 ₽</b>
-                    <a class="podrobnee-button button" href="#">подробнее</a>
-                    <a class="izbrannoe-button button" href="#">В избранное</a>                  
-                  </li>
-
-                  <li class="gostinicy-card">
-                    <a class="gostinicy-card-link" href="product.html">
-                      <img class="gostinicy-card-image" src="4GreenTree Inn.png" alt="GreenTree Inn" width="300" height="206">
-                      <h3 class="gostinicy-card-title">4GreenTree Inn</h3>
+                      <img class="gostinicy-card-image" src="image\cat4.jpg" alt="GreenTree Inn" width="300" height="206">
+                      <h3 class="gostinicy-card-title">GreenTree Inn</h3>
                     </a>
                     <span class="gostinicy-card-type">Гостиница</span>
                     <b class="gostinicy-card-price">От 3000 ₽</b>
                     <a class="podrobnee-button button" href="#">подробнее</a>
                     <a class="izbrannoe-button button" href="#">В избранное</a>                  
-                  </li>                
+                  </li>                 
               </ul>
 
               <ul class="pagination">
@@ -237,7 +231,7 @@
                   </a>
                 </li>
               </ul>
-              <button class="button pagination-show-more" type="button">Показать ещё</button>
+              <button class="button pagination-show-more" type="button">Загрузить ещё</button>
         </section>
 
         <section class="section-6">
@@ -258,18 +252,21 @@
         <section class="fsection-1">
             <h2 class="link visually-hidden">Ссылки на наши ресурсы</h2>
             <ul class="social-ul">
-                <li class="social-li">
+                <li class="social-li">                 
                     <a class="social-a" href="https://twitter.com/htmlacademy_ru">
+                      <img class="soc" alt="twitter" src="image\twitter.svg" height="15" width="19">
                         <span class="visually-hidden">Твиттер</span>
                     </a>
                 </li>
                 <li class="social-li">
                     <a class="social-a" href="https://www.facebook.com/htmlacademy">
+                      <img class="soc" alt="Facebook" src="image\facebook.svg" height="18" width="10">
                         <span class="visually-hidden">Facebook</span>
                     </a>
                 </li>
                 <li class="social-li">
                     <a class="social-a" href="https://www.youtube.com/c/HTMLAcademyRUS">
+                      <img class="soc" alt="Youtube" src="image\youtube.svg" height="16" width="20">
                         <span class="visually-hidden">Youtube </span>
                     </a>
                 </li>
@@ -282,7 +279,7 @@
 
         <section class="fsection-3">
             <a class="navigation-logo-2" href="https://htmlacademy.ru/">
-                <img class="page-logo-2" alt="логотип сайта разработчика" src="logo_htmlacademy.png" height="34" width="115">
+              <img class="tel" alt="логотип сайта разработчика" src="image\tel.svg" height="33" width="115">                
             </a>
         </section>
     </footer>
