--- a/sedona/sedona_index.html
+++ b/sedona/sedona_index.html
@@ -6,47 +6,50 @@
     <link rel="stylesheet" href="styles\styles.css">
   </head>
   <body>
+    <div class="contayner">
     <header class="page-header">
         <nav class="navigation">
             <a class="navigation-logo" href="sedona_index.html">
                 <img class="page-logo" alt="логотип сайта Седона" src="image\a1.svg" height="70" width="139">
             </a>
-            <ul class="navigation-list">                
-                <li class="navigation-item">
-                    <a href="sedona_index.html" class="navigation-link">Главная</a>
+
+            <ul class="navigation-ul">                
+                <li class="navigation-li">
+                    <a href="sedona_index.html" class="navigation-a">Главная</a>
                 </li>
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link">О Седоне</a>
+                <li class="navigation-li">
+                    <a href="#" class="navigation-a">О Седоне</a>
                 </li>
-                <li class="navigation-item">
-                    <a href="sedona_catalog.html" class="navigation-link">Гостиницы</a>
+                <li class="navigation-li">
+                    <a href="sedona_catalog.html" class="navigation-a">Гостиницы</a>
                 </li>
             </ul>
-            <ul class="navigation-list navigation-user">
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link"> 
+            <ul class="navigation-ul-user">
+                <li class="navigation-li">
+                    <a href="#" class="navigation-a"> 
+                        <img class="page-logo" alt="поиск" src="image\a3-search.svg" height="18" width="18">
                         <span class="visually-hidden">поиск</span>
                     </a>
                 </li>
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link">
+                <li class="navigation-li">
+                    <a href="#" class="navigation-a">
+                        <img class="page-logo" alt="лайк" src="image\a2-like.svg" height="18" width="18">
                         <span class="visually-hidden">лайк</span>
                     </a>
+                </li>                
+                <li class="navigation-li">
+                   <button name="ХОЧУ СЮДА!" type="button" value="ХОЧУ СЮДА!">ХОЧУ СЮДА!</button>
                 </li>
-                <li class="navigation-item">
-                    <a href="#" class="navigation-link">
-                        <span class="visually-hidden">Хочу сюда!</span> 
-                    </a>
-                </li>
+
             </ul>
         </nav>      
     </header>
 
     <main class="main-index">
         
-        <section class="main-section">
+        <div class="logo">
         <img class="welcome-logo" alt="приветственный логотип SEDONA" src="image\a5.svg" height="352" width="458">
-        </section>    
+        </div>    
 
         <section class="title-page">
         <h1 class="zagolovok-one">
@@ -70,24 +73,30 @@
             </div>
         </div>
 
-        <section class="section-2">
-            <h2 class="preimushestva-1 visually-hidden">Преимущества</h2>
-            <ul class="preimushestva-1-list">
-                <li class="preimushestva-1-item"> 
+        <section class="pre">
+            <h2 class="pre-h visually-hidden">Преимущества</h2>
+            <ul class="pre-ul">
+                <div class="pre-lbl">
+                <li class="pre-li-lbl"> 
                     <img src="image\a8.svg" alt="логотип домик" width="75" height="72">
-                    <h3 class="preimushestva-1-title">Жильё</h3>
-                    <p class="preimushestva-1-text">Рекомендуем пожить<br> в настоящем мотеле,<br>всё как в кино!</p>
+                    <h3 class="pre-lbl-title">Жильё</h3>
+                    <p class="pre-lbl-text">Рекомендуем пожить<br> в настоящем мотеле,<br>всё как в кино!</p>
                 </li>
-                <li class="preimushestva-1-item"> 
+                </div>
+                <div class="pre-cbl">
+                <li class="pre-li-cbl"> 
                     <img src="image\a9.svg" alt="логотип бургер" width="73,81" height="70">
-                    <h3 class="preimushestva-1-title">Еда</h3>
-                    <p class="preimushestva-1-text">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
+                    <h3 class="pre-lbl-title">Еда</h3>
+                    <p class="pre-lbl-text">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
                 </li>
-                <li class="preimushestva-1-item"> 
+                </div>
+                <div class="pre-rbl">
+                <li class="pre-li-rbl"> 
                     <img src="image\a10.svg" alt="логотип сувениры" width="64" height="75,95">
-                    <h3 class="preimushestva-1-title">Сувениры</h3>
-                    <p class="preimushestva-1-text">Не только китайского,<br>но и настоящего местного<br> производства!</p>
-                </li>           
+                    <h3 class="pre-lbl-title">Сувениры</h3>
+                    <p class="pre-lbl-text">Не только китайского,<br>но и настоящего местного<br> производства!</p>
+                </li>    
+            </div>       
             </ul>
         </section>
 
@@ -151,18 +160,21 @@
         <section class="fsection-1">
             <h2 class="link visually-hidden">Ссылки на наши ресурсы</h2>
             <ul class="social-ul">
-                <li class="social-li">
+                <li class="social-li">                 
                     <a class="social-a" href="https://twitter.com/htmlacademy_ru">
+                      <img class="soc" alt="twitter" src="image\twitter.svg" height="15" width="19">
                         <span class="visually-hidden">Твиттер</span>
                     </a>
                 </li>
                 <li class="social-li">
                     <a class="social-a" href="https://www.facebook.com/htmlacademy">
+                      <img class="soc" alt="Facebook" src="image\facebook.svg" height="18" width="10">
                         <span class="visually-hidden">Facebook</span>
                     </a>
                 </li>
                 <li class="social-li">
                     <a class="social-a" href="https://www.youtube.com/c/HTMLAcademyRUS">
+                      <img class="soc" alt="Youtube" src="image\youtube.svg" height="16" width="20">
                         <span class="visually-hidden">Youtube </span>
                     </a>
                 </li>
@@ -179,6 +191,7 @@
              </a>
         </section>
     </footer>
+</div>
   </body>
 </html>
 
